--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.16.3"
   }
 }
